🚚 Rename Species to Organism

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -55,7 +55,7 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "\n",
-    "lb.settings.species = \"human\"  # globally set species\n",
+    "lb.settings.organism = \"human\"  # globally set organism\n",
     "lb.settings.auto_save_parents = False"
    ]
   },
