--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a File object from this AnnData. Because this will validate the gene IDs and these are only defined given a species, we have to set a species context:"
+    "Let's create a File object from this AnnData. Because this will validate the gene IDs and these are only defined given a organism, we have to set a organism context:"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.settings.species = \"saccharomyces cerevisiae\""
+    "lb.settings.organism = \"saccharomyces cerevisiae\""
    ]
   },
   {
@@ -316,7 +316,7 @@
    "source": [
     "efs = lb.ExperimentalFactor.lookup()\n",
     "modalities = ln.Modality.lookup()\n",
-    "species = lb.Species.lookup()\n",
+    "organism = lb.Organism.lookup()\n",
     "features = ln.Feature.lookup()"
    ]
   },
@@ -372,7 +372,7 @@
    "outputs": [],
    "source": [
     "curated_file.labels.add(efs.rna_seq, features.assay)\n",
-    "curated_file.labels.add(species.saccharomyces_cerevisiae, features.species)"
+    "curated_file.labels.add(organism.saccharomyces_cerevisiae, features.organism)"
    ]
   },
   {
