--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -75,7 +75,7 @@
     "import celltypist\n",
     "import pandas as pd\n",
     "\n",
-    "lb.settings.species = \"human\"  # globally set species"
+    "lb.settings.organism = \"human\"  # globally set organism"
    ]
   },
   {
