--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -75,7 +75,7 @@
     "import scanpy as sc\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "lb.settings.species = \"human\"  # globally set species"
+    "lb.settings.organism = \"human\"  # globally set organism"
    ]
   },
   {
