--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -78,7 +78,7 @@
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
     "\n",
-    "lb.settings.species = \"human\""
+    "lb.settings.organism = \"human\""
    ]
   },
   {
@@ -431,7 +431,7 @@
     "modalities = ln.Modality.lookup()\n",
     "features = ln.Feature.lookup()\n",
     "experimental_factors = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()"
+    "organism = lb.Organism.lookup()"
    ]
   },
   {
@@ -611,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Annotate by linking cytof & species labels:"
+    "Annotate by linking cytof & organism labels:"
    ]
   },
   {
@@ -621,7 +621,7 @@
    "outputs": [],
    "source": [
     "dataset.labels.add(experimental_factors.cytof, features.assay)\n",
-    "dataset.labels.add(species.human, features.species)"
+    "dataset.labels.add(organism.human, features.organism)"
    ]
   },
   {
