--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -35,7 +35,7 @@
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
     "\n",
-    "lb.settings.species = \"human\""
+    "lb.settings.organism = \"human\""
    ]
   },
   {
@@ -278,7 +278,7 @@
     "modalities = ln.Modality.lookup()\n",
     "features = ln.Feature.lookup()\n",
     "efs = lb.ExperimentalFactor.lookup()\n",
-    "species = lb.Species.lookup()\n",
+    "organism = lb.Organism.lookup()\n",
     "markers = lb.CellMarker.lookup()"
    ]
   },
@@ -316,7 +316,7 @@
    "outputs": [],
    "source": [
     "file.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "file.labels.add(species.human, features.species)"
+    "file.labels.add(organism.human, features.organism)"
    ]
   },
   {
@@ -440,7 +440,7 @@
    "outputs": [],
    "source": [
     "dataset_v2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "dataset_v2.labels.add(species.human, features.species)"
+    "dataset_v2.labels.add(organism.human, features.organism)"
    ]
   },
   {
