--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -25,7 +25,7 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "\n",
-    "lb.settings.species = \"human\""
+    "lb.settings.organism = \"human\""
    ]
   },
   {
