--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -60,7 +60,7 @@
     "import matplotlib.pyplot as plt\n",
     "import scanpy as sc\n",
     "\n",
-    "lb.settings.species = \"human\""
+    "lb.settings.organism = \"human\""
    ]
   },
   {
