--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -59,7 +59,7 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "\n",
-    "lb.settings.species = \"human\""
+    "lb.settings.organism = \"human\""
    ]
   },
   {
