♻️ Refactored analysis-flow

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -54,9 +54,91 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
+    "from lamin_utils import logger\n",
     "\n",
     "lb.settings.organism = \"human\"  # globally set organism\n",
     "lb.settings.auto_save_parents = False"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Register an initial dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we register an initial file with a pipeline script."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# register_example_file.py\n",
+    "\n",
+    "\n",
+    "def register_example_file():\n",
+    "    # create a pipeline transform to track the registration of the file\n",
+    "    transform = ln.Transform(\n",
+    "        name=\"register example file\", type=\"pipeline\", version=\"0.0.1\"\n",
+    "    )\n",
+    "    ln.track(transform)\n",
+    "\n",
+    "    # an example dataset that has a few cell type, tissue and disease annotations\n",
+    "    adata = ln.dev.datasets.anndata_with_obs()\n",
+    "\n",
+    "    # validate and register features\n",
+    "    genes = lb.Gene.from_values(adata.var_names, lb.Gene.ensembl_gene_id)\n",
+    "    ln.save(genes)\n",
+    "    obs_features = ln.Feature.from_df(adata.obs)\n",
+    "    ln.save(obs_features)\n",
+    "\n",
+    "    # validate and register labels\n",
+    "    cell_types = lb.CellType.from_values(adata.obs[\"cell_type\"])\n",
+    "    ln.save(cell_types)\n",
+    "    tissues = lb.Tissue.from_values(adata.obs[\"tissue\"])\n",
+    "    ln.save(tissues)\n",
+    "    diseases = lb.Disease.from_values(adata.obs[\"disease\"])\n",
+    "    ln.save(diseases)\n",
+    "\n",
+    "    # register file and annotate with features & labels\n",
+    "    file = ln.File.from_anndata(\n",
+    "        adata, description=\"anndata with obs\", field=lb.Gene.ensembl_gene_id\n",
+    "    )\n",
+    "    file.save()\n",
+    "    features = ln.Feature.lookup()\n",
+    "    file.labels.add(cell_types, features.cell_type)\n",
+    "    file.labels.add(tissues, features.tissue)\n",
+    "    file.labels.add(diseases, features.disease)\n",
+    "\n",
+    "\n",
+    "register_example_file()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pull the registered dataset, apply a transformation, and register the result"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the current notebook as the new transform:"
    ]
   },
   {
@@ -69,170 +151,12 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Track cell types, tissues and diseases"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We fetch an example dataset from LaminDB that has a few cell type, tissue and disease annotations:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata = ln.dev.datasets.anndata_with_obs()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.var_names[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.obs[[\"tissue\", \"cell_type\", \"disease\"]].value_counts()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Register biological metadata and link to the dataset"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As a first step, we register the Anndata object with LaminDB using {meth}`~lamindb.File.from_anndata`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = ln.File.from_anndata(\n",
-    "    adata, key=\"mini_anndata_with_obs.h5ad\", field=lb.Gene.ensembl_gene_id\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "cell_types = lb.CellType.from_values(adata.obs.cell_type, lb.CellType.name)\n",
-    "tissues = lb.Tissue.from_values(adata.obs.tissue, lb.Tissue.name)\n",
-    "diseases = lb.Disease.from_values(adata.obs.disease, lb.Disease.name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All of these look good and contain no typos, let's save them to their registries:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.save(cell_types)\n",
-    "ln.save(tissues)\n",
-    "ln.save(diseases)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We also need some features to bucket these labels:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature(name=\"cell_type\", type=\"category\").save()\n",
-    "ln.Feature(name=\"tissue\", type=\"category\").save()\n",
-    "ln.Feature(name=\"disease\", type=\"category\").save()\n",
-    "features = ln.Feature.lookup()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link labels against the file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file.labels.add(cell_types, feature=features.cell_type)\n",
-    "file.labels.add(tissues, feature=features.tissue)\n",
-    "file.labels.add(diseases, feature=features.disease)"
+    "file = ln.File.filter(description=\"anndata with obs\").one()"
    ]
   },
   {
@@ -242,95 +166,6 @@
    "outputs": [],
    "source": [
     "file.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.view_flow()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Examine the currently available cell types and tissues:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "lb.CellType.filter().df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "lb.Tissue.filter().df()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Processing the dataset"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To track our data transformation we create a new {class}`~lamindb.Transform` of type \"pipeline\":"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform = ln.Transform(\n",
-    "    name=\"Subset to T-cells and liver lymphoma\", version=\"0.1.0\", type=\"pipeline\"\n",
-    ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the current tracking to the new transform:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track(transform)"
    ]
   },
   {
@@ -347,26 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter(key=\"mini_anndata_with_obs.h5ad\").one()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "adata = file.backed()\n",
     "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.obs[[\"cell_type\", \"disease\"]].value_counts()"
    ]
   },
   {
@@ -375,6 +192,16 @@
    "metadata": {},
    "source": [
     "### Subset dataset to specific cell types and diseases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_types = file.cell_types.all().lookup(return_field=\"name\")\n",
+    "diseases = file.diseases.all().lookup(return_field=\"name\")"
    ]
   },
   {
@@ -391,9 +218,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_obs = adata.obs.cell_type.isin([\"T cell\", \"hematopoietic stem cell\"]) & (\n",
-    "    adata.obs.disease.isin([\"liver lymphoma\", \"chronic kidney disease\"])\n",
-    ")"
+    "subset_obs = adata.obs.cell_type.isin(\n",
+    "    [cell_types.t_cell, cell_types.hematopoietic_stem_cell]\n",
+    ") & (adata.obs.disease.isin([diseases.liver_lymphoma, diseases.chronic_kidney_disease]))"
    ]
   },
   {
@@ -420,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This subset can now be registered:"
+    "Register the subsetted AnnData:"
    ]
   },
   {
@@ -431,7 +258,7 @@
    "source": [
     "file_subset = ln.File.from_anndata(\n",
     "    adata_subset.to_memory(),\n",
-    "    key=\"subset/mini_anndata_with_obs.h5ad\",\n",
+    "    description=\"anndata with obs subset\",\n",
     "    field=lb.Gene.ensembl_gene_id,\n",
     ")"
    ]
@@ -446,39 +273,16 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Add labels to features, all of them validate:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types = lb.CellType.from_values(adata.obs.cell_type, lb.CellType.name)\n",
-    "tissues = lb.Tissue.from_values(adata.obs.tissue, lb.Tissue.name)\n",
-    "diseases = lb.Disease.from_values(adata.obs.disease, lb.Disease.name)\n",
+    "features = ln.Feature.lookup()\n",
     "\n",
-    "file_subset.labels.add(cell_types, feature=features.cell_type)\n",
-    "file_subset.labels.add(tissues, feature=features.tissue)\n",
-    "file_subset.labels.add(diseases, feature=features.disease)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_subset.describe()"
+    "file_subset.labels.add(adata_subset.obs.cell_type, features.cell_type)\n",
+    "file_subset.labels.add(adata_subset.obs.disease, features.disease)\n",
+    "file_subset.labels.add(adata_subset.obs.tissue, features.tissue)"
    ]
   },
   {
@@ -490,26 +294,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Common questions that might arise are:\n",
-    "\n",
-    "- Which h5ad file is in the `subset` subfolder?\n",
-    "- Which notebook ingested this file?\n",
-    "- By whom?\n",
-    "- And which file is its parent?\n",
-    "\n",
-    "Let's answer this using LaminDB:"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query a subsetted `.h5ad` file containing \"hematopoietic stem cell\" and \"T cell\" to learn which h5ad file is in the `subset` subfolder:"
+    "Query a subsetted `.h5ad` file containing \"hematopoietic stem cell\" and \"T cell\":"
    ]
   },
   {
@@ -518,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types_bt_lookup = lb.CellType.lookup()"
+    "cell_types = lb.CellType.lookup()"
    ]
   },
   {
@@ -529,10 +317,10 @@
    "source": [
     "my_subset = ln.File.filter(\n",
     "    suffix=\".h5ad\",\n",
-    "    key__startswith=\"subset\",\n",
+    "    description__endswith=\"subset\",\n",
     "    cell_types__in=[\n",
-    "        cell_types_bt_lookup.hematopoietic_stem_cell,\n",
-    "        cell_types_bt_lookup.t_cell,\n",
+    "        cell_types.hematopoietic_stem_cell,\n",
+    "        cell_types.t_cell,\n",
     "    ],\n",
     ").first()"
    ]
@@ -543,7 +331,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_subset.view_flow()"
+    "my_subset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Common questions that might arise are:\n",
+    "\n",
+    "- What is the history of this file?\n",
+    "- Which features and labels are associated with it?\n",
+    "- Which notebook analyzed and registered this file?\n",
+    "- By whom?\n",
+    "- And which file is its parent?\n",
+    "\n",
+    "Let's answer this using LaminDB:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"--> What is the history of this file?\\n\")\n",
+    "file_subset.view_flow()\n",
+    "\n",
+    "print(\"\\n\\n--> Which features and labels are associated with it?\\n\")\n",
+    "logger.print(file_subset.features)\n",
+    "logger.print(file_subset.labels)\n",
+    "\n",
+    "print(\"\\n\\n--> Which notebook analyzed and registered this file\\n\")\n",
+    "logger.print(file_subset.transform)\n",
+    "\n",
+    "print(\"\\n\\n--> By whom\\n\")\n",
+    "logger.print(file_subset.created_by)\n",
+    "\n",
+    "print(\"\\n\\n--> And which file is its parent\\n\")\n",
+    "display(file_subset.run.input_files.df())"
    ]
   },
   {
