📝 Clearer badge titles

--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=wukchS8V976Uz8)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=wukchS8V976Uz8)"
    ]
   },
   {
