--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -315,7 +315,6 @@
    "outputs": [],
    "source": [
     "efs = lb.ExperimentalFactor.lookup()\n",
-    "modalities = ln.Modality.lookup()\n",
     "organism = lb.Organism.lookup()\n",
     "features = ln.Feature.lookup()"
    ]
@@ -327,10 +326,7 @@
    "outputs": [],
    "source": [
     "curated_file = ln.File.from_anndata(\n",
-    "    adata,\n",
-    "    description=\"Curated bulk RNA counts\",\n",
-    "    field=lb.Gene.stable_id,\n",
-    "    modality=modalities.rna,\n",
+    "    adata, description=\"Curated bulk RNA counts\", field=lb.Gene.stable_id\n",
     ")"
    ]
   },
@@ -447,8 +443,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a feature set containing RNA measurements and SPO7 gene expression\n",
-    "feature_set = ln.FeatureSet.filter(genes=genes.spo7, modality__name=\"rna\").first()"
+    "# a gene set containing SPO7\n",
+    "feature_set = ln.FeatureSet.filter(genes=genes.spo7).first()"
    ]
   },
   {
