--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -428,7 +428,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modalities = ln.Modality.lookup()\n",
     "features = ln.Feature.lookup()\n",
     "experimental_factors = lb.ExperimentalFactor.lookup()\n",
     "organism = lb.Organism.lookup()"
@@ -442,9 +441,7 @@
    },
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(\n",
-    "    adata, description=\"Alpert19\", field=lb.CellMarker.name, modality=modalities.protein\n",
-    ")"
+    "file = ln.File.from_anndata(adata, description=\"Alpert19\", field=lb.CellMarker.name)"
    ]
   },
   {
