📝 Refactor project-flow

--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -130,12 +130,18 @@
    },
    "outputs": [],
    "source": [
-    "ln.setup.login(\"testuser1\")\n",
-    "transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
-    "ln.track(transform)\n",
-    "output_path = ln.dev.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
-    "output_file = ln.File(output_path, description=\"Raw data of schmidt22 crispra GWS\")\n",
-    "output_file.save()"
+    "# This function mimics the upload of files via the UI\n",
+    "# In reality, you simply drag and drop files into the UI\n",
+    "def run_upload_crispra_result_app():\n",
+    "    ln.setup.login(\"testuser1\")\n",
+    "    transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
+    "    ln.track(transform)\n",
+    "    output_path = ln.dev.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
+    "    output_file = ln.File(output_path, description=\"Raw data of schmidt22 crispra GWS\")\n",
+    "    output_file.save()\n",
+    "\n",
+    "\n",
+    "run_upload_crispra_result_app()"
    ]
   },
   {
@@ -162,16 +168,26 @@
    },
    "outputs": [],
    "source": [
-    "ln.setup.login(\"testuser2\")\n",
-    "transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
-    "ln.track(transform)\n",
-    "# access\n",
-    "input_file = ln.File.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
-    "# identify hits\n",
-    "input_df = input_file.load().set_index(\"id\")\n",
-    "output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()\n",
-    "# register hits in output file\n",
-    "ln.File(output_df, description=\"hits from schmidt22 crispra GWS\").save()"
+    "def run_hit_identification_notebook():\n",
+    "    # log in as another user\n",
+    "    ln.setup.login(\"testuser2\")\n",
+    "\n",
+    "    # create a new transform to mimic a new notebook (in reality you just run ln.track() in a notebook)\n",
+    "    transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
+    "    ln.track(transform)\n",
+    "\n",
+    "    # access the upload file\n",
+    "    input_file = ln.File.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
+    "\n",
+    "    # identify hits\n",
+    "    input_df = input_file.load().set_index(\"id\")\n",
+    "    output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()\n",
+    "\n",
+    "    # register hits in output file\n",
+    "    ln.File(output_df, description=\"hits from schmidt22 crispra GWS\").save()\n",
+    "\n",
+    "\n",
+    "run_hit_identification_notebook()"
    ]
   },
   {
@@ -215,15 +231,20 @@
    },
    "outputs": [],
    "source": [
-    "ln.setup.login(\"testuser1\")\n",
-    "ln.track(ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
-    "# register output files of upload\n",
-    "upload_dir = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
-    "    \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
-    ")\n",
-    "ln.File(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
-    "ln.File(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
-    "ln.setup.login(\"testuser2\")"
+    "def run_upload_from_sequencer_pipeline():\n",
+    "    ln.setup.login(\"testuser1\")\n",
+    "\n",
+    "    # create a pipeline transform\n",
+    "    ln.track(ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
+    "    # register output files of the sequencer\n",
+    "    upload_dir = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
+    "        \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
+    "    )\n",
+    "    ln.File(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
+    "    ln.File(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
+    "\n",
+    "\n",
+    "run_upload_from_sequencer_pipeline()"
    ]
   },
   {
@@ -252,39 +273,27 @@
    },
    "outputs": [],
    "source": [
-    "transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
-    "ln.track(transform)\n",
-    "# access uploaded files as inputs for the pipeline\n",
-    "input_files = ln.File.filter(key__startswith=\"fastq/perturbseq\").all()\n",
-    "input_paths = [file.stage() for file in input_files]\n",
-    "# register output files\n",
-    "output_files = ln.File.from_dir(\"./mydata/perturbseq/filtered_feature_bc_matrix/\")\n",
-    "ln.save(output_files)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Post-process these 3 files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "transform = ln.Transform(name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\")\n",
-    "ln.track(transform)\n",
-    "input_files = [f.stage() for f in output_files]\n",
-    "output_path = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
-    "output_file = ln.File(output_path, description=\"perturbseq counts\")\n",
-    "output_file.save()"
+    "def run_scrna_analysis_pipeline()\n",
+    "\n",
+    "    ln.setup.login(\"testuser2\")\n",
+    "    transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
+    "    ln.track(transform)\n",
+    "    # access uploaded files as inputs for the pipeline\n",
+    "    input_files = ln.File.filter(key__startswith=\"fastq/perturbseq\").all()\n",
+    "    input_paths = [file.stage() for file in input_files]\n",
+    "    # register output files\n",
+    "    output_files = ln.File.from_dir(\"./mydata/perturbseq/filtered_feature_bc_matrix/\")\n",
+    "    ln.save(output_files)\n",
+    "\n",
+    "    # Post-process these 3 files\n",
+    "    transform = ln.Transform(name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\")\n",
+    "    ln.track(transform)\n",
+    "    input_files = [f.stage() for f in output_files]\n",
+    "    output_path = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
+    "    output_file = ln.File(output_path, description=\"perturbseq counts\")\n",
+    "    output_file.save()\n",
+    "\n",
+    "run_scrna_analysis_pipeline()\n"
    ]
   },
   {
@@ -300,7 +309,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_files[0].view_flow()"
+    "output_file = ln.file.filter(description=\"perturbseq counts\").one()\n",
+    "output_file.view_flow()"
    ]
   },
   {
@@ -327,32 +337,39 @@
    },
    "outputs": [],
    "source": [
-    "transform = ln.Transform(\n",
-    "    name=\"Perform single cell analysis, integrate with CRISPRa screen\",\n",
-    "    type=\"notebook\",\n",
-    ")\n",
-    "ln.track(transform)\n",
+    "def run_integrated_analysis_notebook():\n",
+    "    import scanpy as sc\n",
     "\n",
-    "file_ps = ln.File.filter(description__icontains=\"perturbseq\").one()\n",
-    "adata = file_ps.load()\n",
-    "file_hits = ln.File.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
-    "screen_hits = file_hits.load()\n",
+    "    # create a new transform to mimic a new notebook (in reality you just run ln.track() in a notebook)\n",
+    "    transform = ln.Transform(\n",
+    "        name=\"Perform single cell analysis, integrate with CRISPRa screen\",\n",
+    "        type=\"notebook\",\n",
+    "    )\n",
+    "    ln.track(transform)\n",
     "\n",
-    "import scanpy as sc\n",
+    "    # access the output files of bfx pipeline and previous analysis\n",
+    "    file_ps = ln.File.filter(description__icontains=\"perturbseq\").one()\n",
+    "    adata = file_ps.load()\n",
+    "    file_hits = ln.File.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
+    "    screen_hits = file_hits.load()\n",
     "\n",
-    "sc.tl.score_genes(adata, adata.var_names.intersection(screen_hits.index).tolist())\n",
-    "filesuffix = \"_fig1_score-wgs-hits.png\"\n",
-    "sc.pl.umap(adata, color=\"score\", show=False, save=filesuffix)\n",
-    "filepath = f\"figures/umap{filesuffix}\"\n",
-    "file = ln.File(filepath, key=filepath)\n",
-    "file.save()\n",
-    "filesuffix = \"fig2_score-wgs-hits-per-cluster.png\"\n",
-    "sc.pl.matrixplot(\n",
-    "    adata, groupby=\"cluster_name\", var_names=[\"score\"], show=False, save=filesuffix\n",
-    ")\n",
-    "filepath = f\"figures/matrixplot_{filesuffix}\"\n",
-    "file = ln.File(filepath, key=filepath)\n",
-    "file.save()"
+    "    # perform analysis and register output plot files\n",
+    "    sc.tl.score_genes(adata, adata.var_names.intersection(screen_hits.index).tolist())\n",
+    "    filesuffix = \"_fig1_score-wgs-hits.png\"\n",
+    "    sc.pl.umap(adata, color=\"score\", show=False, save=filesuffix)\n",
+    "    filepath = f\"figures/umap{filesuffix}\"\n",
+    "    file = ln.File(filepath, key=filepath)\n",
+    "    file.save()\n",
+    "    filesuffix = \"fig2_score-wgs-hits-per-cluster.png\"\n",
+    "    sc.pl.matrixplot(\n",
+    "        adata, groupby=\"cluster_name\", var_names=[\"score\"], show=False, save=filesuffix\n",
+    "    )\n",
+    "    filepath = f\"figures/matrixplot_{filesuffix}\"\n",
+    "    file = ln.File(filepath, key=filepath)\n",
+    "    file.save()\n",
+    "\n",
+    "\n",
+    "run_integrated_analysis_notebook()"
    ]
   },
   {
@@ -380,6 +397,7 @@
    },
    "outputs": [],
    "source": [
+    "# track the current notebook as transform\n",
     "ln.track()\n",
     "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
     "file.stage()"
