--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -273,8 +273,7 @@
    },
    "outputs": [],
    "source": [
-    "def run_scrna_analysis_pipeline()\n",
-    "\n",
+    "def run_scrna_analysis_pipeline():\n",
     "    ln.setup.login(\"testuser2\")\n",
     "    transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
     "    ln.track(transform)\n",
@@ -286,14 +285,17 @@
     "    ln.save(output_files)\n",
     "\n",
     "    # Post-process these 3 files\n",
-    "    transform = ln.Transform(name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\")\n",
+    "    transform = ln.Transform(\n",
+    "        name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\"\n",
+    "    )\n",
     "    ln.track(transform)\n",
     "    input_files = [f.stage() for f in output_files]\n",
     "    output_path = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
     "    output_file = ln.File(output_path, description=\"perturbseq counts\")\n",
     "    output_file.save()\n",
     "\n",
-    "run_scrna_analysis_pipeline()\n"
+    "\n",
+    "run_scrna_analysis_pipeline()"
    ]
   },
   {
