--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -311,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = ln.file.filter(description=\"perturbseq counts\").one()\n",
+    "output_file = ln.File.filter(description=\"perturbseq counts\").one()\n",
     "output_file.view_flow()"
    ]
   },
