🚚 Rename data batch to shard

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -13,14 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Append a new batch of data"
+    "# Append a new shard of data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have one file in storage and are about to receive a new batch of data.\n",
+    "We have one file in storage and are about to receive a new shard of data.\n",
     "\n",
     "In this notebook, we'll see how to manage the situation."
    ]
